--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -8,12 +8,12 @@
 	<div layout:fragment="content">
 		<h1 th:text="${heading} + ' (' + ${#lists.size(allMatches)} + ')'"></h1>
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4" th:each="matchCommand : ${allMatches}">
+				<div class="col-6 col-md-4" th:each="matchCommand : ${allMatches}">
 					<a class="anchor" th:id="${matchCommand.matchId}"></a>
-					<div class="panel panel-default">
-						<div class="panel-heading">
+					<div class="card card-default">
+						<div class="card-header">
 							<div class="row">
-								<div class="col-xs-12">
+								<div class="col-12">
 									<img class="flag" th:if="${matchCommand.getIconPathTeamOne() != null}" th:src="@{${matchCommand.getIconPathTeamOne()}}"/>
 							  		<span class="bold" th:text="${matchCommand.teamNameOne}"></span>
 							  		<span> - </span>
@@ -21,16 +21,16 @@
 							  		<span class="bold" th:text="${matchCommand.teamNameTwo}"></span>
 									<br/>
 									<span th:text="${#temporals.format(matchCommand.kickOffDate, 'EEE dd. MMMM yyyy HH:mm')}"></span>
-									<span class="label label-warning label-as-badge big-badge right" th:if="${matchCommand.hasMatchFinished()}" th:text="${matchCommand.points}"></span>																  		
-									<br/> 
+									<span class="label label-warning label-as-badge big-badge right" th:if="${matchCommand.hasMatchFinished()}" th:text="${matchCommand.points}"></span>
+									<br/>
 									<span th:text="#{${matchCommand.group.titleMsgKey}}"></span><span>,</span>
 									<span th:text="${matchCommand.stadium}"></span>
-					  			</div>					  			
-				  			</div>				  									
+					  			</div>
+				  			</div>
 						</div>
-						<div class="panel-body">
+						<div class="card-body">
 							<div class="row">
-								<div class="col-xs-2 center">
+								<div class="col-2 center">
 									<div class="short-div goal_padding">
 										<a th:if="${!matchCommand.isBettable()}" th:href="@{'/bet/others/match/' + ${matchCommand.matchId} + '?redirectViewName=' + ${redirectViewName}}">
 											<span class="fas fa-thumbs-up fa-2x" th:title="#{matches.list.betted}" data-toggle="tooltip" data-placement="top"></span>
@@ -39,30 +39,30 @@
 									</div>
 									<div class="short-div goal_padding">
 										<span class="fas fa-trophy fa-2x" th:title="#{matches.list.result}" data-toggle="tooltip" data-placement="bottom"></span>
-									</div>							  									  		
-					  			</div>					
-					  			<div class="col-xs-4 goal-badges center">				
+									</div>
+					  			</div>
+					  			<div class="col-4 goal-badges center">
 					  				<div class="short-div goal_padding_bigger">
-					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.getUserBetGoalsTeamOneCssClasses()}" 
+					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.getUserBetGoalsTeamOneCssClasses()}"
 					  					      th:text="${matchCommand.userBetGoalsTeamOne != null ? matchCommand.userBetGoalsTeamOne : '?'}"></span>
 								  		<span> : </span>
-							  			<span class="label label-as-badge big-badge" th:classappend="${matchCommand.getUserBetGoalsTeamTwoCssClasses()}" 
+							  			<span class="label label-as-badge big-badge" th:classappend="${matchCommand.getUserBetGoalsTeamTwoCssClasses()}"
 							  			      th:text="${matchCommand.userBetGoalsTeamTwo != null ? matchCommand.userBetGoalsTeamTwo : '?'}"></span>
-					  				</div>	  				
+					  				</div>
 					  				<div class="short-div goal_padding">
-					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.getTeamResultOneCssClasses()}" 
+					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.getTeamResultOneCssClasses()}"
 					  					      th:text="${matchCommand.teamResultOne != null ? matchCommand.teamResultOne : '?'}"></span>
 								  		<span> : </span>
-							  			<span class="label label-as-badge big-badge" th:classappend="${matchCommand.getTeamResultTwoCssClasses()}" 
+							  			<span class="label label-as-badge big-badge" th:classappend="${matchCommand.getTeamResultTwoCssClasses()}"
 							  			      th:text="${matchCommand.teamResultTwo != null ? matchCommand.teamResultTwo : '?'}"></span>
 					  				</div>
-					  			</div>  			
-					  			<div class="col-xs-6 button-bar">
+					  			</div>
+					  			<div class="col-6 button-bar">
 					  				<div class="row center">
-								        <a sec:authorize="hasAuthority('PERM_EDIT_MATCH')" href="#" th:href="@{'/match/' + ${matchCommand.matchId}}" 
+								        <a sec:authorize="hasAuthority('PERM_EDIT_MATCH')" href="#" th:href="@{'/match/' + ${matchCommand.matchId}}"
 								              class="btn btn-primary" role="button" th:title="#{matches.list.editMatch}">
 											  <span class="fas fa-edit"></span>
-				            			</a>				            			
+				            			</a>
 				            			<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId} + '?redirectViewName=' + ${redirectViewName}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'"
 												   class="btn btn-success" role="button" th:title="#{matches.list.betMatch}">
 											<span class="fas fa-thumbs-up"></span>
@@ -72,14 +72,14 @@
 				            					<span class="fas fa-trophy"></span>
 				            			</a>
 							        </div>
-	       						</div>	       						
+	       						</div>
        						</div>
-					   </div>					   
+					   </div>
 					</div>
-				</div>				
+				</div>
 			</div>
 			<a sec:authorize="hasAuthority('PERM_CREATE_MATCH')" href="#" th:href="@{/match/create}" class="btn btn-primary" role="button" th:text="#{matches.list.createMatch}"></a>
-	</div>	
+	</div>
 </body>
 <th:block layout:fragment="scripts">
 	<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
