update layout matches

--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" th:href="@{/webjars/bootstrap-icons/font/bootstrap-icons.css}" />
 <!--		<link rel="stylesheet" th:href="${@runtimeSettingsUtil.getSettings().getBootswatchThemeUrl()}" />-->
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
-<!--		<link rel="stylesheet" th:href="@{/css/custom.css}" />-->
+		<link rel="stylesheet" th:href="@{/css/custom.css}" />
 	</head>
 	<body>
 		<nav th:replace="~{_navigation :: menu}"></nav>
