--- a/src/main/resources/static/css/pages/matches_list.css
+++ b/src/main/resources/static/css/pages/matches_list.css
@@ -2,12 +2,6 @@
     font-size: 15px;
 }
 
-.goal_padding {
-    padding-top: 0;
-    padding-bottom: 5px;
-}
-
-.goal_padding_bigger {
-    padding-top: 3px;
-    padding-bottom: 13px;
+.right {
+    float: right;
 }
