--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<nav th:replace="~{_navigation :: menu}"></nav>
-		<div class="container" role="main">
+		<div class="container mt-3" role="main">
 			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			<div layout:fragment="content" th:remove="tag">Content Placeholder</div>
 		</div>
