--- a/src/main/resources/templates/matches/edit.html
+++ b/src/main/resources/templates/matches/edit.html
@@ -45,13 +45,9 @@
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('teamNameTwo')}" th:errors="*{teamNameTwo}">teamNameTwo error</p>
 					</div>
 					<div class="form-group mb-3">
-		                <label for="kickOffDateString" th:text="#{matches.form.kickOff} + ':'"></label>
-		                <div class="input-group date form_datetime" data-link-field="kickOffDateString" data-date-format="dd.mm.yyyy hh:ii" data-link-format="dd.mm.yyyy hh:ii">
-		                    <input class="form-control" size="16" type="text" value="" th:value="${createEditMatchCommand.kickOffDateString}" readonly="readonly"/>
-							<span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
-		                </div>
-						<input type="hidden" id="kickOffDateString" th:field="*{kickOffDateString}" value="" />
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('kickOffDateString')}" th:errors="*{kickOffDateString}">kickOffDateString error</p>
+		                <label for="kickOffDate" th:text="#{matches.form.kickOff} + ':'"></label>
+						<input type="datetime-local" id="kickOffDate" th:field="*{kickOffDate}" />
+						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('kickOffDate')}" th:errors="*{kickOffDate}">kickOffDate error</p>
 		            </div>
 					<div class="form-group mb-3">
 						<label for="stadium" th:text="#{matches.form.stadium} + ':'"></label>
@@ -77,9 +73,6 @@
 	</div>
 </body>
 <th:block layout:fragment="scripts">
-	<script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.js}" charset="UTF-8"></script>
-	<script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.de.js}" charset="UTF-8"></script>
-	<script type="text/javascript" th:src="@{/js/datepicker-selection.js}" charset="UTF-8"></script>
 	<script type="text/javascript" th:src="@{/js/pages/edit_match.js}" charset="UTF-8"></script>
 </th:block>
 </html>
