update edit match

--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -44,17 +44,17 @@
 					  			</div>
 					  			<div class="col-4">
 					  				<div class="mb-2 mt-2">
-					  					<span class="badge rounded-pill bg-primary big-badge" th:classappend="${matchCommand.getUserBetGoalsTeamOneCssClasses()}"
+					  					<span class="badge rounded-pill bg-success big-badge" th:classappend="${matchCommand.getUserBetGoalsTeamOneCssClasses()}"
 					  					      th:text="${matchCommand.userBetGoalsTeamOne != null ? matchCommand.userBetGoalsTeamOne : '?'}"></span>
 								  		<span> : </span>
-							  			<span class="badge rounded-pill bg-primary big-badge" th:classappend="${matchCommand.getUserBetGoalsTeamTwoCssClasses()}"
+							  			<span class="badge rounded-pill bg-success big-badge" th:classappend="${matchCommand.getUserBetGoalsTeamTwoCssClasses()}"
 							  			      th:text="${matchCommand.userBetGoalsTeamTwo != null ? matchCommand.userBetGoalsTeamTwo : '?'}"></span>
 					  				</div>
 					  				<div class="">
-					  					<span class="badge rounded-pill bg-success big-badge" th:classappend="${matchCommand.getTeamResultOneCssClasses()}"
+					  					<span class="badge rounded-pill bg-info big-badge" th:classappend="${matchCommand.getTeamResultOneCssClasses()}"
 					  					      th:text="${matchCommand.teamResultOne != null ? matchCommand.teamResultOne : '?'}"></span>
 								  		<span> : </span>
-							  			<span class="badge rounded-pill bg-success big-badge" th:classappend="${matchCommand.getTeamResultTwoCssClasses()}"
+							  			<span class="badge rounded-pill bg-info big-badge" th:classappend="${matchCommand.getTeamResultTwoCssClasses()}"
 							  			      th:text="${matchCommand.teamResultTwo != null ? matchCommand.teamResultTwo : '?'}"></span>
 					  				</div>
 					  			</div>
