update match result

--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -51,12 +51,12 @@
 						</div>
 						<div class="row center" mb-3>
 							<div class="col-6">
-								<button type="button" class="btn btn-secondary" onclick="oneCountUp()"><i class="fas fa-chevron-up" aria-hidden="true"></i></button>
-								<button type="button" class="btn btn-secondary" onclick="oneCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
+								<button type="button" class="btn btn-secondary vote" onclick="oneCountUp()"><i class="fas fa-chevron-up" aria-hidden="true"></i></button>
+								<button type="button" class="btn btn-secondary vote" onclick="oneCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
 							</div>
 							<div class="col-6">
-								<button type="button" class="btn btn-secondary" onclick="twoCountUp()"><i class="fas fa-chevron-up" aria-hidden="true"></i></button>
-								<button type="button" class="btn btn-secondary" onclick="twoCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
+								<button type="button" class="btn btn-secondary vote" onclick="twoCountUp()"><i class="fas fa-chevron-up" aria-hidden="true"></i></button>
+								<button type="button" class="btn btn-secondary vote" onclick="twoCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
 							</div>
 						</div>
 						<div id="penaltyBox" th:if="${!matchResultCommand.isGroupMatch()}">
