--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -38,13 +38,13 @@
 						</div>
 						<div class="row center">
 							<div class="col-6 ps-5 pe-5">
-								<input type="text" th:field="*{goalsTeamOne}" class="form-control form-size-small color-vote fw-bold" onchange="checkPenalty()"/>
+								<input type="text" th:field="*{goalsTeamOne}" class="form-control form-size-small bg-success fw-bold" onchange="checkPenalty()"/>
 								<br/>
 								<br/>
 								<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('goalsTeamOne')}" th:errors="*{goalsTeamOne}">goalsTeamOne error</p>
 							</div>
 							<div class="col-6 ps-5 pe-5">
-								<input type="text" th:field="*{goalsTeamTwo}" class="form-control form-size-small color-vote fw-bold" onchange="checkPenalty()"/>
+								<input type="text" th:field="*{goalsTeamTwo}" class="form-control form-size-small bg-success fw-bold" onchange="checkPenalty()"/>
 								<br/>
 								<br/>
 								<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('goalsTeamTwo')}" th:errors="*{goalsTeamTwo}">goalsTeamTwo error</p>
@@ -52,12 +52,12 @@
 						</div>
 						<div class="row center mb-3">
 							<div class="col-6">
-								<button type="button" class="btn btn-secondary" onclick="oneCountUp()"><i class="fas fa-chevron-up" aria-hidden="true"></i></button>
-								<button type="button" class="btn btn-secondary" onclick="oneCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
+								<button type="button" class="btn btn-secondary vote" onclick="oneCountUp()"><i class="fas fa-chevron-up" aria-hidden="true"></i></button>
+								<button type="button" class="btn btn-secondary vote" onclick="oneCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
 							</div>
 							<div class="col-6">
-								<button type="button" class="btn btn-secondary" onclick="twoCountUp()"><i class="fas fa-chevron-up" aria-hidden="true"></i></button>
-								<button type="button" class="btn btn-secondary" onclick="twoCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
+								<button type="button" class="btn btn-secondary vote" onclick="twoCountUp()"><i class="fas fa-chevron-up" aria-hidden="true"></i></button>
+								<button type="button" class="btn btn-secondary vote" onclick="twoCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
 							</div>
 						</div>
 						<div id="penaltyBox" th:if="${!betCommand.isGroupMatch()}">
