--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" th:each="ranking,status : ${rankings}">
-					<div class="panel panel-default">
+					<div class="panel ">
                         <div class="panel-heading collapse">
                             <span th:text="#{ranking.details.title(${ranking.correctResultCount}, ${ranking.goalDifference})}"></span>
                         </div>
