--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -9,12 +9,12 @@
 			<h1 th:text="#{user.list.title} + ' (' + ${allUsers.size()} + ')'"></h1>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4" th:each="userDto : ${allUsers}">
-					<div class="panel panel-default">					
+					<div class="panel ">
 						<div class="panel-body user-panel-body">
 							<div class="row">
 								<div class="col-xs-7 user-label">
-									<span th:replace="~{fragments/profile_image :: profile_image_big_with_popup(${userDto.userProfileImageKey})}"></span>									
-									<span th:text="${userDto.username}"></span>							  		
+									<span th:replace="~{fragments/profile_image :: profile_image_big_with_popup(${userDto.userProfileImageKey})}"></span>
+									<span th:text="${userDto.username}"></span>
 					  			</div>
 					  			<div class="col-xs-5">
 					  				<div class="row custom-button-group">
@@ -22,11 +22,11 @@
 					  						<span class="fas fa-edit"></span>
 				  						</a>
 									</div>
-					  			</div>				  				
+					  			</div>
 	      					</div>
-					   </div>					   
+					   </div>
 					</div>
-				</div>				
+				</div>
 			</div>
 			<a href="#" th:href="@{/user/create}" class="btn btn-primary" role="button" th:text="#{user.list.createUser}"></a>
 		</div>
