--- a/src/main/resources/templates/admin/active_users.html
+++ b/src/main/resources/templates/admin/active_users.html
@@ -7,16 +7,16 @@
 <body>
 	<div layout:fragment="content">
 		<h1 th:text="#{active.users.title}"></h1>
-		<div class="col-xs-12 col-sm-6 col-md-4">			
+		<div class="col-xs-12 col-sm-6 col-md-4">
 			<div class="row" th:each="sessionTracking : ${userList}">
-				<div class="panel panel-default">					
+				<div class="panel ">
 					<div class="panel-heading">
 						<span th:text="${sessionTracking.userName}"></span>
 						<span class="right" th:text="${#temporals.format(sessionTracking.lastLogin, #messages.msg('app.dateformat'))}"></span>
-				   </div>					   
-				</div>			
-			</div>		
-		</div>		
+				   </div>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
