--- a/src/main/resources/templates/admin/excel_import.html
+++ b/src/main/resources/templates/admin/excel_import.html
@@ -9,15 +9,15 @@
 			<h2 th:text="#{excel.import.title}"></h2>
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="row">
-					<div class="panel panel-default">
+					<div class="panel ">
 						<div class="user panel-heading">
 							  <span th:text="#{excel.download.template.name}"></span>
 						</div>
 						<div class="panel-body">
 							<a href="#" th:href="@{/excelimport/download/template}" th:text="#{excel.download.template}"></a>
 						</div>
-					</div>			
-				</div>	
+					</div>
+				</div>
 				<div class="row">
 					<form th:action="@{/excelimport/upload}" th:object="${excelUploadCommand}" method="post" enctype="multipart/form-data" role="form">
 						<div class="form-group">
@@ -26,10 +26,10 @@
 						</div>
 						<div class="form-group">
 							<span class="label label-danger" th:text="#{excel.download.hint.allMatchesDeleted}"></span>
-						</div>						
+						</div>
 						<div class="form-group">
 							<input type="submit" class="btn btn-primary" th:value="#{excel.upload.button}" />
-						</div>		
+						</div>
 					</form>
 				</div>
 			</div>
