--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -8,27 +8,27 @@
 		<div layout:fragment="content">
 			<h1 th:text="#{statistics.title}"></h1>
 			<div class="row" th:if="${not #lists.isEmpty(statisticList)}">
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">					
+				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
 					<img class="flag" th:src="@{${favouriteCountry.getIconPath()}}"/> <span th:text="#{statistics.legend.favouriteCountry}"></span>,
 					<span class="fas fa-magic" aria-hidden="true"></span> <span th:text="#{statistics.legend.bonusPoints}"></span>,
-					
+
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-8 col-lg-9">
 					<span class="fas fa-star blue" aria-hidden="true"></span> <span th:text="#{statistics.legend.topBetter}"></span>,
 					<span class="fas fa-lightbulb red" aria-hidden="true"></span> <span th:text="#{statistics.legend.flopBetter}"></span>
 				</div>
-			</div>		
+			</div>
 			<br/>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4" th:each="statistic : ${statisticList}" style="max-height: 176px;">
-					<div class="panel panel-default panel-statistic">
+					<div class="panel  panel-statistic">
 						<div class="panel-heading">
 							<span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(statistic.username)})}"></span>
 							<span th:text="${statistic.username} + ' (' + ${statistic.getSum()} + ') '"></span>
 							<span th:if="${statistic.minPointsCandidate}" class="fas fa-lightbulb red" aria-hidden="true"></span>
 							<span th:if="${statistic.maxPointsCandidate}" class="fas fa-star blue" aria-hidden="true"></span>
 							<span>,</span>
-							<img class="flag" th:src="@{${statistic.favoriteCountry.getIconPath()}}"/>	
+							<img class="flag" th:src="@{${statistic.favoriteCountry.getIconPath()}}"/>
 							<span th:text="' (' + ${statistic.pointsFavoriteCountry} + ')'"></span>
 							<span th:if="${statistic.maxFavoriteCountryCandidate}" class="fas fa-star blue" aria-hidden="true"></span>
 							<span>,</span>
@@ -65,7 +65,7 @@
 					   	   </div>
 					   </div>
 					</div>
-				</div>				
+				</div>
 			</div>
 		</div>
 	</body>
