--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -11,7 +11,7 @@
 			<div class="row">
 				<div class="col-12 col-sm-6 col-md-4" th:each="matchCommand : ${allMatches}">
 					<a class="anchor" th:id="${matchCommand.matchId}"></a>
-					<div class="card card-default mb-3">
+					<div class="card  mb-3">
 						<div class="card-header">
 							<div class="row">
 								<div class="col-12">
