--- a/src/main/resources/templates/user/user_import_export.html
+++ b/src/main/resources/templates/user/user_import_export.html
@@ -8,18 +8,18 @@
 			<h2 th:text="#{user.importexport.title}"></h2>
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="row">
-					<div class="panel panel-default">
+					<div class="panel ">
 						<div class="user panel-heading">
 							  <span th:text="#{user.importexport.export.name}"></span>
 						</div>
 						<div class="panel-body">
 							<a href="#" th:href="@{/user/export}" th:text="#{user.importexport.export.users}"></a>
 						</div>
-					</div>			
-				</div>	
+					</div>
+				</div>
 				<div class="row">
 					<form th:action="@{/user/import}" th:object="${userImportExportCommand}" method="post" enctype="multipart/form-data" role="form">
-						<div class="panel panel-default">
+						<div class="panel ">
 							<div class="user panel-heading">
 								<span th:text="#{user.importexport.import.file}"></span>
 							</div>
