--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -208,20 +208,27 @@
                         </li>
                     </ul>
                 </li>
-            </ul>
-        </div>
-        <div class="collapse navbar-collapse justify-content-end" th:if="${@webSecurityUtil.isUserLoggedIn()}">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="dropdown">
-                    <div th:replace="~{fragments/language_selector :: language_selector('dropdown-toggle')}"></div>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" th:classappend="${classes}" id="language" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        <img th:src="${@languageUtil.getImageLanguageIconPath()}" />
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="language">
+                        <li><a th:href="${@languageUtil.buildUrl('de')}" class="dropdown-item language"><img src="/images/lang/de.png" th:text="' '+#{language.de}" /></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('en')}" class="dropdown-item language"><img src="/images/lang/en.png" th:text="' '+#{language.en}" /></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('pl')}" class="dropdown-item language"><img src="/images/lang/pl.png" th:text="' '+#{language.pl}" /></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('es')}" class="dropdown-item language"><img src="/images/lang/es.png" th:text="' '+#{language.es}" /></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('ca')}" class="dropdown-item language"><img src="/images/lang/ca.png" th:text="' '+#{language.ca}" /></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('cze')}" class="dropdown-item language"><img src="/images/lang/cze.png" th:text="' '+#{language.cze}" /></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" /></a></li>
+                    </ul>
                 </li>
-                <li class="navbar d-flex flex-row me-auto">
-                    <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
-                       data-bs-toggle="dropdown" aria-expanded="false">
+                <li class="nav-item dropdown">
+                    <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         <img th:src="@{'/gallery/showthumb/' + ${@webSecurityUtil.getCurrentUserProfileImageKey()}}"
                              th:alt="${@webSecurityUtil.getCurrentUsername()}" width="32" height="32" class="rounded-circle">
                     </a>
-                    <ul class="dropdown-menu text-small">
+                    <ul class="dropdown-menu">
                         <li>
                             <a class="dropdown-item" th:href="@{/profile/changePassword}" th:text="#{navigation.changePassword}"></a>
                         </li>
