--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -63,8 +63,8 @@
                                     <span th:text="${bet.userName}" class="ranking-name"></span>
                                 </div>
                                 <div class="col-4">
-                                                <span class="badge rounded-pill bg-success" th:classappend="${bet.getCssClassPenaltyWinnerOne()}"
-                                                      th:text="${bet.goalsTeamOne}"></span>
+                                    <span class="badge rounded-pill bg-success" th:classappend="${bet.getCssClassPenaltyWinnerOne()}"
+                                          th:text="${bet.goalsTeamOne}"></span>
                                     <span> : </span>
                                     <span class="badge rounded-pill bg-success" th:classappend="${bet.getCssClassPenaltyWinnerTwo()}"
                                           th:text="${bet.goalsTeamTwo}"></span>
@@ -83,6 +83,7 @@
                     <a href="#" th:href="@{${allBetsCommand.getBackUrl()}}" class="btn btn-light" th:text="#{button.back}"></a>
                 </div>
             </div>
+        </div>
 	</body>
     <th:block layout:fragment="scripts">
         <script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
