migration to bootstrap 5

--- a/src/main/resources/templates/profile/crop_image.html
+++ b/src/main/resources/templates/profile/crop_image.html
@@ -23,7 +23,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4">
+                <div class="col-12 col-sm-6 col-md-4 mt-3 mt-md-0">
                     <h2 th:text="#{user.image.cropping.result}"></h2>
                     <br class="mt-4"/>
                     <form th:action="@{/cropping/upload}" method="post" enctype="multipart/form-data" role="form">
