--- a/src/main/resources/templates/profile/change_username.html
+++ b/src/main/resources/templates/profile/change_username.html
@@ -10,7 +10,7 @@
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4">
 						<div class="mb-3">
-							<label for="newUsername" th:text="#{userprofile.changeUsername.newUsername} + ':'"></label>
+							<label for="newUsername" class="form-label" th:text="#{userprofile.changeUsername.newUsername} + ':'"></label>
 							<input id="newUsername" type="text" th:field="*{newUsername}" class="form-control" size="12" maxlength="12"/>
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('newUsername')}" th:errors="*{newUsername}">newUsername error</p>
 						</div>
